--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "jquery": "^3.5.1",
+    "jquery-mousewheel": "^3.1.13",
     "lazyload": "^2.0.0-rc.2",
     "smart-grid": "^2.1.2",
     "swiper": "^6.3.2"
